<resources>
  <string name="new_regular_payment">New Regular payment</string>
  <string name="manage_regular_payment">Manage Regular Payment</string>
  <string name="abcdxyz123">ABCDXYZ123</string>
  <string name="confirm">Confirm</string>
  <string name="makeinitialpayment">Confirm and Approve Payments</string>
  <string name="cancel">Cancel</string>
  <string name="confirmPayment">Confirm payment</string>
  <string name="ok">ok</string>
  <string name="view">view</string>
  <string name="active">Active</string>
  <string name="invoice_schedule">Payment Name</string>
  <string name="payment">Payment</string>
  <string name="make_payment">Make Payment</string>
  <string name="lang">eng</string>
  <string name="app_name">Eclair DEV</string>
  <string name="notification_channel_closing_ln_channel_name">Channel Closing</string>
  <string name="notification_channel_closing_ln_channel_desc">Notification displayed when a channel is closing, be it cooperative or not.</string>
  <string name="networkinfos_name">Network Info</string>
  <string name="about_name">About</string>
  <string name="lnpayment_name">Lightning Payment Details</string>
  <string name="btcpayment_name">Transaction Details</string>
  <string name="channeldetails_name">Channel Details</string>
  <string name="channelrawdata_name">Channel Raw Data</string>
  <string name="home_toast_openchannel_failed">Failed to open channel: </string>
  <string name="home_channel_paste_uri">Paste a node URI</string>
  <string name="home_channel_scan_uri">Scan a node URI</string>
  <string name="home_channel_random">Random node</string>
  <string name="home_channel_acinq">ACINQ node</string>
  <string name="home_sync_progress">%1$d%%</string>
  <string name="home_sync_progress_desc">Updating the lightning network map</string>
  <string name="home_sync_progress_about"><![CDATA[
  The wallet is currently downloading an up-to-date map of the Lightning Network. Lightning payments might fail until synchronization is complete.
  <br><br>
  Note that this wallet computes payments routes on-device to protect your privacy.
  ]]></string>
  <string name="home_no_backup">NO BACKUP</string>
  <string name="home_backup_disabled_icon_desc">Channels backup is disabled!</string>
  <string name="payment_do_send">Pay</string>
  <string name="payments_title">Transaction history</string>
  <string name="payments_empty">No transactions yet…</string>
  <string name="localchannels_title">Lightning Channels</string>
  <string name="localchannels_active_empty">No active channels yet…\nTo open a new channel click on the button below.</string>
  <string name="localchannels_show_inactive">Show closed channels</string>
  <string name="localchannels_hide_inactive">Hide closed channels</string>
  <string name="receive_title">Your bitcoin address</string>
  <string name="home_intro_welcome">Welcome!</string>
  <string name="home_intro_welcome_sub">Tap anywhere to continue this short tour.</string>
  <string name="home_intro_receive">Swipe left</string>
  <string name="home_intro_receive_sub">To display your address and\nreceive funds.</string>
  <string name="home_intro_openchannel">Swipe right</string>
  <string name="home_intro_openchannel_sub">To open a Lightning Network channel.</string>
  <string name="home_intro_openchannel_patience">Please be patient.</string>
  <string name="home_intro_openchannel_patience_sub">Opening a channel takes 2 confirmations.</string>
  <string name="home_intro_sendpayment">Click here to send a payment</string>
  <string name="home_intro_sendpayment_sub">Make sure to have 1 channel\nin NORMAL state</string>
  <string name="disclaimer_1"><![CDATA[
    <h1>WARNING</h1>
    <p>
      This is beta software based on bleeding edge technology, please <b>use with a reasonable
      amount of money!</b>
    </p>
    <p>
      <b>ON-CHAIN FUNDS</b>
      <br />
      On-chain funds are secured by a BIP39 seed with a BIP49 derivation path.
      You can back them up like you would with any other wallet.
    </p>
    <p>
      <b>OFF-CHAIN FUNDS (Lightning)</b><br />
      Off-chain funds <b>cannot currently be backed up</b>. This will be improved in a coming
      release, but for now, consider them like coins in your physical wallet: if you lose your
      device or clear your application data, you will lose the bitcoins in your Lightning channels.
    </p>
    ]]>
  </string>
  <string name="disclaimer_1_button_ok">I UNDERSTAND</string>
  <string name="disclaimer_button_quit">QUIT</string>
  <string name="start_enter_password">Enter password to unlock</string>
  <string name="start_error_breaking_changes"><![CDATA[
    <h3>Breaking changes</h3>
    This new version requires a clean data directory. Please reset the app\'s data.
    <br />
    <br />
    From now on next versions should be backward compatible.
  ]]></string>
  <string name="start_error_restart">Restart</string>
  <string name="start_error_faq_link">Check our FAQ for help.</string>
  <string name="start_error_unreadable_seed">Seed is not readable; eclair can not start.</string>
  <string name="start_error_connectivity">Your device is not connected to the internet. Please check your network settings.</string>
  <string name="start_error_timeout">Could not start eclair within a reasonable time frame.</string>
  <string name="start_error_wrong_password">Wrong password.</string>
  <string name="start_error_improper">App did not initialize properly, restarting…</string>
  <string name="start_error_generic">Could not start eclair.</string>
  <string name="start_error_datadir_unreadable">Datadir is not readable.</string>
  <string name="start_error_datadir_not_directory">Datadir is not a directory.</string>
  <string name="start_error_unencrypted">Your seed is not encrypted. Please enter a password.</string>
  <string name="start_log_reading_seed">reading seed…</string>
  <string name="createwallet_init_title">Recovery Words</string>
  <string name="createwallet_init_instructions">Please backup this 12 words list in a secure location (not on this phone).\n\nIf you lose your device, this list is the only way to recover your funds.</string>
  <string name="createwallet_single_word_display"><![CDATA[<small>#%1$d</small> <b>%2$s</b>]]></string>
  <string name="createwallet_check_skip">Skip this step</string>
  <string name="createwallet_check_input_hint">Word #%1$d</string>
  <string name="createwallet_check_title">Backup verification</string>
  <string name="createwallet_check_instructions">What are the #%1$d, #%2$d and #%3$d words of the recovery phrase?</string>
  <string name="createwallet_check_failed">Wrong words!\nCheck the seed again.</string>
  <string name="createwallet_check_failed_button">Check seed</string>
  <string name="createwallet_error_write_seed">The seed could not be saved on disk.\n\nCause: %1$s</string>
  <string name="createwallet_invalid_seed">Error in wallet creation, aborting…</string>
  <string name="createwallet_error_seed_generation">Could not generate the recovery phrase…</string>
  <string name="createwallet_error_generic">Wallet creation error, aborting…</string>
  <string name="createwallet_encryption_title">Seed Encryption</string>
  <string name="createwallet_encryption_instructions">The seed must now be encrypted with a 6 digits PIN.</string>
  <string name="createwallet_encryption_button">Set pin</string>
  <string name="createwallet_please_wait">Please wait…</string>
  <string name="createwallet_success">Your wallet has been successfully created!</string>
  <string name="wallet_passphrase_title">Passphrase</string>
  <string name="wallet_passphrase_instructions">Eclair supports passphrase. If you don\'t know what this is, or if you wallet does not have a passphrase, leave this field blank, and click Next.</string>
  <string name="wallet_passphrase_confirm_title">Confirm Passphrase</string>
  <string name="wallet_passphrase_error">Invalid passphrase: %1$s</string>
  <string name="wallet_passphrase_input_hint">Passphrase…</string>
  <string name="wallet_passphrase_confirm_input_hint">Confirm Passphrase…</string>
  <string name="wallet_passphrase_error_do_not_match">Passphrases do not match</string>
  <string name="importwallet_init_title">Enter Wallet Seed</string>
  <string name="importwallet_init_instructions">This is the recovery phrase of your wallet, which should be a list of 12 or 24 words.</string>
  <string name="importwallet_next_button">Next</string>
  <string name="importwallet_seed_error">This seed is invalid:\n%1$s</string>
  <string name="importwallet_error">Could not import this seed/passphrase</string>
  <string name="importwallet_input_hint">Recovery words…</string>
  <string name="importwallet_encrypt_button">Restore</string>
  <string name="importwallet_encrypt">Seed Encryption</string>
  <string name="importwallet_success">Seed has been restored and encrypted.</string>
  <string name="restorechannels_title">If you already used Eclair Wallet with this seed, you may have a backup on Google Drive.\n\nDo you want to attempt to restore these channels?</string>
  <string name="restorechannels_check_button">Check for backup</string>
  <string name="restorechannels_permissions_error">Permission was not granted.</string>
  <string name="restorechannels_failure">There was an error when restoring backup. Please try again.</string>
  <string name="restorechannels_success">Backup was successfully restored!</string>
  <string name="restorechannels_no_backup">No backup was found.</string>
  <string name="restorechannels_no_backup_try_again">Try again</string>
  <string name="restorechannels_no_backup_and_finish">Abort and proceed</string>
  <string name="restorechannels_looking_for_backup">Please wait…</string>
  <string name="restorechannels_sync_rate_limit">Drive sync rate limit! Try again later</string>
  <string name="restorechannels_skip_backup">Ignore (no backup)</string>
  <string name="restorechannels_skip_backup_confirmation"><![CDATA[
    Are you sure you want to skip this step?
    <br><br>
    Any Lightning backups that would currently exist will be overwritten, and you <strong>will not be able to restore them later</strong>.
  ]]></string>
  <string name="restorechannels_device_conflict">We found a backup for this seed, but it looks like it was created by another android device (or the same device that you\'ve upgraded to Android 8+).\n\nPlease make sure that you do not simultaneously use the same channels on different devices, otherwise they will conflict and close.</string>
  <string name="restorechannels_device_conflict_confirm">I Understand.</string>
  <string name="openchannel_loading_pleasewait">Reading node address, please wait…</string>
  <string name="openchannel_dns_seed">Node discovery is based on a DNS seed mechanism (see BOLT 10).\n\nThis feature is not available yet.</string>
  <string name="openchannel_title">Open a new Lightning Channel</string>
  <string name="openchannel_capacity">CAPACITY</string>
  <string name="openchannel_capacity_hint">Channel capacity in</string>
  <string name="openchannel_capacity_invalid">Channel capacity must be between %1$s and %2$s</string>
  <string name="openchannel_capacity_notenoughfunds">Not enough funds</string>
  <string name="openchannel_error_capacity_nan">Capacity amount is not valid</string>
  <string name="openchannel_error_fees_nan">Funding tx fees are not valid</string>
  <string name="openchannel_error_fees_gt_0">Funding tx fee must be greater than 0</string>
  <string name="openchannel_error_address">This is not a valid node URI.\n\nExpected format is nodeId@host:port</string>
  <string name="openchannel_do_open">Open</string>
  <string name="openchannel_pubkey">Node id</string>
  <string name="the_following_regular_payments_are_awaiting_your_authorisation_untick_any_payments_you_no_longer_wish_to_pay">The following Regular Payments are awaiting your authorisation (untick any payments you no longer wish to pay)</string>
</resources>