<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="summaryPurchasePresenter"
            type="fr.acinq.eclair.wallet.presenter.SummaryPurchasePresenter"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/content_summary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical">




            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                >
                <TextView
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                  android:textSize="@dimen/textSize"

                  android:hint="@string/abcdxyz123"
                    android:textColorHint="@color/blue_light_x1"
                    android:textColor="@color/green"
                    android:background="@drawable/rounded_corner_button"
                    />

            </LinearLayout>
            <Button
                android:id="@+id/confirm"
                android:layout_margin="10dp"
                android:textSize="@dimen/textSize"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/makeinitialpayment"
                android:textColor="@color/white"
                android:onClick="@{(v)->summaryPurchasePresenter.confirm()}"
                android:background="@drawable/rounded_corner_blue"/>
            <Button
                android:id="@+id/cancel"
                android:layout_margin="10dp"
                android:layout_width="200dp"
              android:textSize="@dimen/textSize"

              android:layout_height="40dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:onClick="@{(v)->summaryPurchasePresenter.cancel()}"
                android:background="@drawable/rounded_corner_blue"/>
        </LinearLayout>

    </LinearLayout>




</layout>
